[update: add new api and fixed the document]
